glib/girepository/girepository-wrapper.h

extern void glib_autoptr_clear_GIRepository_wrapper(GIRepository * _ptr);
extern void glib_autoptr_cleanup_GIRepository_wrapper(GIRepository ** _ptr);
extern void glib_autoptr_destroy_GIRepository_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIRepository_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIRepository_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIRepository_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIRepositoryClass_wrapper(GIRepositoryClass * _ptr);
extern void glib_autoptr_cleanup_GIRepositoryClass_wrapper(GIRepositoryClass ** _ptr);
extern void glib_autoptr_destroy_GIRepositoryClass_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIRepositoryClass_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIRepositoryClass_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIRepositoryClass_wrapper(GQueue ** _q);
extern GIRepository * GI_REPOSITORY_wrapper(gpointer ptr);
extern gboolean GI_IS_REPOSITORY_wrapper(gpointer ptr);
extern void glib_autoptr_clear_GITypelib_wrapper(GITypelib * _ptr);
extern void glib_autoptr_cleanup_GITypelib_wrapper(GITypelib ** _ptr);
extern void glib_autoptr_destroy_GITypelib_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GITypelib_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GITypelib_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GITypelib_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIBaseInfo_wrapper(GIBaseInfo * _ptr);
extern void glib_autoptr_cleanup_GIBaseInfo_wrapper(GIBaseInfo ** _ptr);
extern void glib_autoptr_destroy_GIBaseInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIBaseInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIBaseInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIBaseInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIArgInfo_wrapper(GIArgInfo * _ptr);
extern void glib_autoptr_cleanup_GIArgInfo_wrapper(GIArgInfo ** _ptr);
extern void glib_autoptr_destroy_GIArgInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIArgInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIArgInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIArgInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GICallableInfo_wrapper(GICallableInfo * _ptr);
extern void glib_autoptr_cleanup_GICallableInfo_wrapper(GICallableInfo ** _ptr);
extern void glib_autoptr_destroy_GICallableInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GICallableInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GICallableInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GICallableInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GICallbackInfo_wrapper(GICallbackInfo * _ptr);
extern void glib_autoptr_cleanup_GICallbackInfo_wrapper(GICallbackInfo ** _ptr);
extern void glib_autoptr_destroy_GICallbackInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GICallbackInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GICallbackInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GICallbackInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIConstantInfo_wrapper(GIConstantInfo * _ptr);
extern void glib_autoptr_cleanup_GIConstantInfo_wrapper(GIConstantInfo ** _ptr);
extern void glib_autoptr_destroy_GIConstantInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIConstantInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIConstantInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIConstantInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIEnumInfo_wrapper(GIEnumInfo * _ptr);
extern void glib_autoptr_cleanup_GIEnumInfo_wrapper(GIEnumInfo ** _ptr);
extern void glib_autoptr_destroy_GIEnumInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIEnumInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIEnumInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIEnumInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIFieldInfo_wrapper(GIFieldInfo * _ptr);
extern void glib_autoptr_cleanup_GIFieldInfo_wrapper(GIFieldInfo ** _ptr);
extern void glib_autoptr_destroy_GIFieldInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIFieldInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIFieldInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIFieldInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIFlagsInfo_wrapper(GIFlagsInfo * _ptr);
extern void glib_autoptr_cleanup_GIFlagsInfo_wrapper(GIFlagsInfo ** _ptr);
extern void glib_autoptr_destroy_GIFlagsInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIFlagsInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIFlagsInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIFlagsInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIFunctionInfo_wrapper(GIFunctionInfo * _ptr);
extern void glib_autoptr_cleanup_GIFunctionInfo_wrapper(GIFunctionInfo ** _ptr);
extern void glib_autoptr_destroy_GIFunctionInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIFunctionInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIFunctionInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIFunctionInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIInterfaceInfo_wrapper(GIInterfaceInfo * _ptr);
extern void glib_autoptr_cleanup_GIInterfaceInfo_wrapper(GIInterfaceInfo ** _ptr);
extern void glib_autoptr_destroy_GIInterfaceInfo_wrapper(void * _ptr);